# cookiecutter-python-project

./: README.rst  cookiecutter.json
{{cookiecutter.package}}/: .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.rst  mypy.ini  pyproject.toml  setup.py  tox.ini
{{cookiecutter.package}}/.github/workflows/: main.yml  tox.yml
