[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.package}}"
description = ""
readme = {file="README.md", content-type="text/markdown"}
version = "0.0.1"
dependencies = []
authors = [
  {name="{{ cookiecutter.author_name }}", email="{{ cookiecutter.author_email }}"},
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = []

[project.urls]
Repository = "{{ cookiecutter.repo_url }}"

[project.optional-dependencies]
test = ["pytest-cov", "coverage[toml]"]
dev = [
    "ipython",
    "jedi==0.17.2",
    "pdbpp",
    "black==19.10b0",
    "isort==5.6.4",
    "flake8",
    "mypy",
    "pre-commit",
    "tox",
]


[tool.black]
line-length = 80

[tool.coverage.run]
parallel = true
branch = true
source = ["{{cookiecutter.package}}"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.isort]
multi_line_output = 3
profile = "black"
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 80
